--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Aaqib Khan</h1>
-      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="Backend Developer, Creative Thinker"></span></p>
+      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="FullStack Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -71,7 +71,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>Welcome to my Devfolio</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
