--- a/index.html
+++ b/index.html
@@ -54,25 +54,26 @@
       </ul>
     </nav> -->
 
-  </header><!-- End Header -->
+  </header>
 
-  <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Aaqib Khan</h1>
-      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="FullStack Developer"></span></p>
+      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="Backend Developer with a pinch of love for UX/UI Designing."></span></p>
     </div>
-  </section><!-- End Hero -->
+  </section>
 
   <main id="main">
-
-    <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Devfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I’m a Backend Developer, specializing in development of P&C solutions in .NET core including Web API, I’m also familiar with Microsoft Azure and hands on experience with the services offered for web development.
+
+            During the course of my career, I have gained comprehensive SDLC knowledge by closely working with teams in setting up applications, developing and integrating Insurance associated features for US based clients.
+            
+            I love reviewing existing implementation and provide creative solutions that would prove to be prominent.</p>
         </div>
 
         <div class="row">
