--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Aaqib Khan</h1>
-      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="Backend Developer with a pinch of love for UX/UI Designing."></span></p>
+      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="Backend Developer with a pinch of love for UX/UI Designing :)"></span></p>
     </div>
   </section>
 
@@ -81,7 +81,7 @@
             <img src="https://media-exp1.licdn.com/dms/image/D5603AQGJW4oknQvt-Q/profile-displayphoto-shrink_800_800/0/1636910066044?e=1649289600&v=beta&t=Yl54iJYWyWWgdAKeevYR6iJNQIZUsMvw13-RvBnfzPY" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Backend Developer</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
