--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Aaqib Khan</h1>
-      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="Backend Developer with a pinch of love for UX/UI Designing :)"></span></p>
+      <h1 style="color: rgb(136, 255, 243);">Aaqib Khan</h1>
+      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="Backend Developer with a pinch of love for UX/UI Designing."></span></p>
     </div>
   </section>
 
@@ -69,11 +69,7 @@
 
         <div class="section-title">
           <h2>Devfolio</h2>
-          <p>I’m a Backend Developer, specializing in development of P&C solutions in .NET core including Web API, I’m also familiar with Microsoft Azure and hands on experience with the services offered for web development.
-
-            During the course of my career, I have gained comprehensive SDLC knowledge by closely working with teams in setting up applications, developing and integrating Insurance associated features for US based clients.
-            
-            I love reviewing existing implementation and provide creative solutions that would prove to be prominent.</p>
+          <p>I’m a Backend Developer, specializing in development of P&C solutions in .NET core including Web API, I’m also familiar with Microsoft Azure and hands on experience with the services offered for web development.</p>
         </div>
 
         <div class="row">
@@ -90,23 +86,22 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 Jan 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.aaqibkhan.online</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.aaqibkhan.online</span></li> -->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 909-645-1551</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Goa, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>404</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Nah!</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BE in Information Technology</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>aaqibkhan658@gmail.com</span></li>
+                  
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              During the course of my career, I have gained comprehensive SDLC knowledge by closely working with teams in setting up applications, developing and integrating Insurance associated features for US based clients. I love reviewing existing implementation and provide creative solutions that would prove to be prominent.
             </p>
           </div>
         </div>
