--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Backend Developer</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p class="fst-italic" style="padding-bottom: 20px;">
+              Total Experience : 1 Year 8 Months.
             </p>
-            <div class="row">
+            <div class="row" style="padding-bottom: 20px;">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 Jan 1998</span></li>
