--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 Jan 1998</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.aaqibkhan.online</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 909-645-1551</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Goa, India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Margao - Goa, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
