--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <ul>
                 <li>Implemented Web API Solutions for B2C Application that would enable creation of Submissions and Polices and submitting the same to the B2B Application</li>
                 <li>Closely worked in Angular Implementation, setting up of B2C Application for P/C Insurance clients.</li>
-                <li>Oversee the efficient development of product, Automated copy product creation by implementing a stored procedure that cuts down the development efforts from hours to milliseconds.</li>
+                <li>Oversee the efficient development of product, Automated copy product creation by implementing a stored procedure that cuts down development efforts from hours to milliseconds.</li>
                 <li>Supervised the assessment of all graphic designs in order to ensure quality and user-friendliness of the design</li>
                 <li>Implemented B2C Application Insights logging to Azure.</li>
                 <li>Single handedly managed to implement an architecture that will ease out switching between themes in the Core Application built in VB.Net.</li>
