--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor in Information Technology (7.14 CGPA)</h4>
+              <h4>Bachelor's in Information Technology (7.14 CGPA)</h4>
               <h5>2016 - 2020</h5>
               <p><em>Goa College Of Engineering, Ponda-Goa</em></p>
               <p>Lead the project for implementing an app that captures class attendance by facial recognition and provides analytics to the professors.</p>
