--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <h3>Aaqib Khan</h3>
       <div class="social-links">
         <a href="https://www.facebook.com/profile.php?id=100023994494979" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="www.linkedin.com/in/aaqib-khan-sd" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/aaqib-khan-sd" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
