--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       </div>
     </section>
-    <section id="skills" class="skills section-bg">
+    <section id="skills" class="skills section-bg" style="padding-top:5px;">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
