--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="https://media-exp1.licdn.com/dms/image/D5603AQGJW4oknQvt-Q/profile-displayphoto-shrink_800_800/0/1636910066044?e=1649289600&v=beta&t=Yl54iJYWyWWgdAKeevYR6iJNQIZUsMvw13-RvBnfzPY" class="img-fluid" alt="">
+            <img src="assets/img/profile.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Backend Developer</h3>
