--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="title" property="og:title" content="HEY THERE THIS WORKS FINE">
-  <meta name="image" property="og:image" content="https://devfolio.co/static/og-image-3.png">
+  <meta name="image" property="og:image" content="assets/img/thumb.png">
   <title>Aaqib Khan - Devfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
