--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta name="title" property="og:title" content="HEY THERE THIS WORKS FINE">
+  <meta name="title" property="og:title" content="DevFolio - Aaqib Khan">
   <meta name="image" property="og:image" content="assets/img/thumb.png">
   <title>Aaqib Khan - Devfolio</title>
   <meta content="" name="description">
