--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="title" property="og:title" content="DevFolio - Aaqib Khan">
-  <meta name="image" property="og:image" content="assets/img/thumb.png">
+  <meta name="image" property="og:image" content="https://github.com/Aaqib-Khan-SP/devfoliio/blob/2decf73b7696ed92e8aca0554c808a255c11a29f/assets/img/thumb.PNG">
   <title>Aaqib Khan - Devfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
