--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
               <h5>Aug 2020 - Present</h5>
               <p><em>Panjim - Goa, India.</em></p>
               <ul>
-                <li>Implemented Web API Solutions for B2C Application that would enable creation of Submissions and Polices and submitting the same to the B2B Application</li>
+                <li>Implementing Web API Solutions for B2C Application that would enable creation of Submissions and Polices and submitting the same to the B2B Application</li>
                 <li>Closely worked in Angular Implementation, setting up of B2C Application for P/C Insurance clients.</li>
                 <li>Oversee the efficient development of product, Automated copy product creation by implementing a stored procedure that cuts down development efforts from hours to milliseconds.</li>
                 <li>Supervised the assessment of all graphic designs in order to ensure quality and user-friendliness of the design</li>
                 <li>Implemented B2C Application Insights logging to Azure.</li>
-                <li>Single handedly managed to implement an architecture that will ease out switching between themes in the Core Application built in VB.Net.</li>
+                <li>Implemented an architecture that will ease out switching between themes in the Core Application built in VB.Net.</li>
               </ul>
             </div>
             <div class="resume-item">
