--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <h4> Higher Secondary (76%)</h4>
               <h5>2014 - 2016</h5>
               <p><em>Rosary Higher Secondary, Margao-Goa</em></p>
-              <p>State Rank 6 in Computer Science Olympiad 2015</p>
+              <p>State <b>Rank 6</b> in Computer Science Olympiad 2015</p>
             </div>
             <div class="resume-item">
               <h4> High School (84.14%)</h4>
