--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </section>
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
+    <section id="resume" class="resume" style="padding-top:0px;">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
