--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 style="color: rgb(136, 255, 243);">Aaqib Khan</h1>
-      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="Backend Developer with a pinch of love for UX/UI Designing."></span></p>
+      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="FullStack Developer with a pinch of love for Cloud Computing"></span></p>
     </div>
   </section>
 
@@ -48,7 +48,7 @@
 
         <div class="section-title">
           <h2>Devfolio</h2>
-          <p>I’m a Backend Developer, specializing in development of P&C solutions in .NET core including Web API, I’m also familiar with Microsoft Azure and hands on experience with the services offered for web development.</p>
+          <p>I’m a FullStack Developer, specializing in development of P&C solutions in .NET core including Web API, I’m also familiar with Microsoft Azure and hands on experience with the services offered for web development.</p>
         </div>
 
         <div class="row">
@@ -56,9 +56,9 @@
             <img src="assets/img/profile.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Backend Developer</h3>
+            <h3>FullStack Developer</h3>
             <p class="fst-italic" style="padding-bottom: 20px;">
-              Total Experience : 1 Year 9 Months.
+              Total Experience : 1 Year 10 Months.
             </p>
             <div class="row" style="padding-bottom: 20px;">
               <div class="col-lg-6">
