--- a/index.html
+++ b/index.html
@@ -204,6 +204,41 @@
       </div>
     </section><!-- End Resume Section -->
 
+    <section id="services" class="services" style="padding-top:0px;">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Certifications</h2>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-1 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200"></div>
+          <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box iconbox-red">
+              <!-- <div class="icon"> -->
+                <img style="width: 200px;height: 200px;" src="assets/img/az-900.png" class="img-fluid" alt="">
+              <!-- </div> -->
+              <h3><a href="">Azure Fundamentals</a></h3>
+              <h6><p>Achieved <b>857/1000</b></p></h6><br>
+            </div>
+          </div>
+
+          <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box iconbox-red">
+              <!-- <div class="icon"> -->
+                <img style="width: 200px;height: 200px;" src="assets/img/ll.png" class="img-fluid" alt="">
+              <!-- </div> -->
+              <h3><a href="https://www.linkedin.com/in/aaqib-khan-sd/details/certifications/">6+ LinkedIn Certifications</a></h3>
+              <p><b>Detailed Courses on Azure, Programming Design Patterns, Angular and ASP.NET Core.</b></p>
+            </div>
+          </div>
+          <div class="col-lg-1 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200"></div>
+        </div>
+
+      </div>
+    </section>
+
     <section id="skills" class="skills section-bg" style="padding-top:0px;">
       <div class="container" data-aos="fade-up">
 
