--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 style="color: rgb(136, 255, 243);">Aaqib Khan</h1>
-      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="FullStack Developer with a pinch of love for Cloud Computing"></span></p>
+      <p style="color: aliceblue;">I'm a <span class="typed" data-typed-items="FullStack Developer with a pinch of love for Cloud Computing."></span></p>
     </div>
   </section>
 
@@ -192,7 +192,7 @@
             </div>
             <div class="resume-item">
               <h4> High School (84.14%)</h4>
-              <h5>2014 - 2016</h5>
+              <h5>2011 - 2014</h5>
               <p><em>Perpetual Succour Convent High School, Margao-Goa</em></p>
               <p>Student of the Year 2012-2013</p>
               <p>Disciplinary Leader</p>
