--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <!-- <div class="icon"> -->
                 <img style="width: 200px;height: 207px;" src="assets/img/ll.png" class="img-fluid" alt="">
               <!-- </div> -->
-              <h3><a href="https://www.linkedin.com/in/aaqib-khan-sd/details/certifications/">6+ LinkedIn Certifications</a></h3>
+              <h3><a href="https://www.linkedin.com/in/aaqib-khan-sd/details/certifications/">6+ Learning Certifications</a></h3>
               <p><b>Detailed Courses on Azure, Programming Design Patterns, Angular and ASP.NET Core.</b></p>
             </div>
           </div>
