--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>FullStack Developer</h3>
             <p class="fst-italic" style="padding-bottom: 20px;">
-              Total Experience : 1 Year 10 Months.
+              Total Experience : 2 Years.
             </p>
             <div class="row" style="padding-bottom: 20px;">
               <div class="col-lg-6">
